# zhesaurus

./: Cargo.toml
src/: main.rs  thesaurus.rs
